[package]
name = "onlyswaps-client"
version.workspace = true
edition.workspace = true

[features]
default = ["serde", "fee-estimator"]
fee-estimator = ["dep:reqwest", "dep:serde"]
permit2 = ["serde", "dep:serde_json", "alloy/dyn-abi", "alloy/eip712", "alloy/rand"]
serde = ["dep:serde"]
solver = []

[dependencies]
alloy.workspace = true
backoff.workspace = true
futures-util.workspace = true
generated.workspace = true
superalloy.workspace = true
tracing.workspace = true
thiserror.workspace = true

# fee-estimator dependencies
reqwest = { workspace = true, features = ["json"], optional = true }
serde = { workspace = true, optional = true }

# permit2 dependencies
serde_json = { workspace = true, optional = true }

[dev-dependencies]
alloy = { workspace = true, features = ["reqwest-default-tls", "transports", "provider-ws", "provider-anvil-node"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber.workspace = true
