[package]
name = "serde-keys"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
# crypto
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
serde = { workspace = true, features = ["derive"] }
hex.workspace = true
base64.workspace = true
libp2p.workspace = true