[package]
name = "signer-config"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
ark-bn254.workspace = true
figment = { workspace = true, features = ["toml"] }
libp2p.workspace = true
serde.workspace = true
serde-keys = { version = "0.1.0", path = "../serde-keys" }
utils.workspace = true
shellexpand = "3.1.1"


