[package]
name = "dcipher-signer"
version.workspace = true
edition.workspace = true

[features]
rayon = ["dep:rayon"]

[dependencies]
dcipher-network.workspace = true

# crypto
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
utils = { workspace = true }

# hashes
sha3 = { workspace = true }

# async
futures-util = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-util = { workspace = true }

# logs / metrics
prometheus = { workspace = true }
tracing = { workspace = true }

# serde
serde = { workspace = true, features = ["derive"] }
serde_cbor.workspace = true

# misc
itertools = { workspace = true }
thiserror = { workspace = true }
lru = "0.14"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
dcipher-network = { workspace = true, features = ["libp2p", "in_memory"] }
