[package]
name = "superalloy"
version.workspace = true
edition.workspace = true

[dependencies]
# blockchain
alloy = { workspace = true, features = ["default", "provider-ws"] }

# async
futures = { workspace = true }
futures-util = { workspace = true }

# logs / metrics
tracing = { workspace = true }

# misc
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
