[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[features]
bn254 = ["dep:ark-bn254", "svdw"]
bls12-381 = ["dep:ark-bls12-381"]
svdw = []
sha3 = ["dep:sha3"]

[dependencies]
ark-bn254 = { version = "0.4.0", optional = true }
ark-bls12-381 = { version = "0.4.0", optional = true }
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
arrayvec = "0.7.6"
base64 = "0.22.1"
digest = "0.10.7"
itertools = "0.13.0"
rstest = "0.22.0"
serde = "1.0.209"
sha2 = "0.10.8"
sha3 = { version = "0.10", optional = true }
thiserror = "1.0.63"

[dev-dependencies]
hex = "0.4.3"
sha3 = "0.10.8"
