[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[features]
bn254 = ["dep:ark-bn254", "svdw"]
bls12-381 = ["dep:ark-bls12-381"]
svdw = []
sha3 = ["dep:sha3"]

[dependencies]
ark-bn254 = { workspace = true, optional = true }
ark-bls12-381 = { workspace = true, optional = true }
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
arrayvec = "0.7.6"
base64.workspace = true
digest.workspace = true
itertools.workspace = true
rstest = "0.22.0"
serde = { workspace = true, features = ["derive", "alloc"] }
serde_with = { workspace = true, features = ["base64"] }
sha2 = "0.10.8"
sha3 = { workspace = true, optional = true }
thiserror = "1.0.63"

[dev-dependencies]
rstest = "0.22.0"
hex.workspace = true
sha3.workspace = true
