[package]
name = "adkg"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
itertools = "0.13.0"
reed-solomon = "0.2.1"
sha3 = "0.10.8"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
ark-bn254 = "0.4.0"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
