[package]
name = "pairing_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
arrayvec = "0.7.6"
base64 = "0.22.1"
digest = "0.10.7"
itertools = "0.13.0"
rstest = "0.22.0"
serde = "1.0.209"
sha2 = "0.10.8"
thiserror = "1.0.63"

[dev-dependencies]
hex = "0.4.3"
sha3 = "0.10.8"
